# auto-chair

./: Cargo.toml  LICENSE  README.md
auto-chair-openalex/: Cargo.toml
auto-chair-openalex/codegen/: Cargo.toml
auto-chair-openalex/codegen/src/: generator.rs  main.rs
auto-chair-openalex/schema/: Author.json  Authorship.json  Award.json  Concept.json  DehydratedSource.json  Funder.json  Institution.json  Keyword.json  Location.json  Mesh.json  OrganizationRole.json  Publisher.json  Source.json  Topic.json  Work.json  apc.json  apc.yaml  author.json  author.yaml  authorship.json  authorship.yaml  award.json  award.yaml  bibliography.json  bibliography.yaml  concept.yaml  counts_by_year.json  counts_by_year.yaml  dehydrated_institution.json  dehydrated_institution.yaml  dehydrated_source.yaml  funder.json  funder.yaml  geo.json  geo.yaml  institution.json  institution.yaml  keyword.yaml  location.json  location.yaml  (+16 more)
auto-chair-openalex/src/: entities.rs  lib.rs  main.rs
auto-chair-openalex/src/entities/: apc.rs  topic.rs
